@@ -1,7 +1,7 @@
 Package: robustbase
 Version: 0.93-7
 VersionNote: Released 0.93-6 on 2020-03-21 to CRAN
-Date: 2020-12-04
+Date: 2020-12-28
 Title: Basic Robust Statistics
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
          , person("Peter", "Rousseeuw", role="ctb", comment = "Qn and Sn")
@@ -32,6 +32,8 @@ Suggests: grid, MASS, lattice, boot, cluster, Matrix, robust,
         fit.models, MPV, xtable, ggplot2, GGally, RColorBrewer,
         reshape2, sfsmisc, catdata, doParallel, foreach, skewt
 SuggestsNote: mostly only because of vignette graphics and simulation
+Enhances: robustX, rrcov, matrixStats, quantreg, Hmisc
+EnhancesNote: linked to in man/*.Rd
 ByteCompile: yes
 LazyData: yes
 NeedsCompilation: yes
