@@ -2,7 +2,8 @@
 \usepackage[a4paper, text={16cm,25cm}]{geometry}
 
 %\VignetteIndexEntry{Simulations for Robust Regression Inference in Small Samples}
-%\VignetteDepends{robustbase, xtable, ggplot2,GGally, RColorBrewer, grid, reshape2}
+%\VignettePackage{robustbase}
+%\VignetteDepends{xtable,ggplot2,GGally,RColorBrewer,grid,reshape2}
 
 \usepackage{amsmath}
 \usepackage{natbib}
